style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* CSS Reset Ends here */

body {
    font-family: "Liberation Sans";
    font-size: 14px;
}

a {
    text-decoration: none;
    color: #222222; 
}

a:hover {
    text-decoration: underline;    
}

.promo-msg a {
    color: #1a0dab;
}

.top-navbar {
    display: flex;
    padding: 5px;
    justify-content: space-between;
    margin: 15px;
}

.top-navbar li {
    display: inline;
    padding: 5px;
}

.left-navbar {
    display: flex;
}

.right-navbar {
    display: flex;
}

.dot-menu-container {
    width: 25px;
    height: 25px;
    display: inline-block;
    vertical-align: middle;
    border-radius: 50%;
    padding: 10px;
}

.dot-menu-container:hover {
    background-color: #f2f2f2;
}

.dot-icon {
    display: block;
    fill: #5f6368;
}

.center-navbar {
    display: flex;
}

.bottom-navbar {
    display: flex;
    position: fixed;
    justify-content: space-between;
    width: 100%;
    background-color: #f2f2f2;
    bottom: 0;
}

.bottom-navbar li {
    padding: 5px;
    margin: 15px;
}

.logo {
    margin: 25px auto;
    width: 272px;
    height: 92px;
}

/* CSS for the search form */
.search-form {
    max-width: 568px;
    margin: 25px auto;
}

.input-field {
    box-sizing: border-box;
    width: 100%;
}

.search-btns {
    display: flex;
    justify-content: center;
    margin: 20px;
}

.promo-msg {
    text-align: center;
}

.promo-img {
    vertical-align: middle;
}

